Community updates, fixed the styles on the groups page so that buttons are aligned on the right

--- a/apps/search/public/stylesheets/template.css
+++ b/apps/search/public/stylesheets/template.css
@@ -1368,7 +1368,7 @@ ul.sub-menu li {
 }
 .search-result-each .search-text{
   float:left;
-  width:75%;
+  width:93%;
   text-align:justify;
   color:#6E6F73;
   font-size:13px;
